--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Running a Code Club | London Web Standards</title>
+		<title>Running a Code Club | Sevenoaks Web Scene</title>
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -35,9 +35,9 @@
 
 	<body>
 
-		<div class="corner">
+		<!--<div class="corner">
 			<img src="images/signature.svg" alt="@Calum_Ryan">
-		</div>
+		</div>-->
 
 		<div class="reveal">
 
@@ -51,7 +51,7 @@
 					<hr>
 
 					<h4>Calum Ryan</h4>
-					<p class="uppercase"><small>London Web Standards - January 2015</small></p>
+					<p class="uppercase"><small>Sevenoaks Web Scene - June 2015</small></p>
 				</section>
 
 				<section>
@@ -62,10 +62,20 @@
 					
 					<img src="images/codeclub.jpg" alt="Calum with pupil teaching">
 
+					<div class="caption">
+						<div class="decor"></div>
+						<h3>Tufnell Park School</h3>
+					</div>
+
 				</section>
 
 				<section style="text-align: left;"  data-background="#349946">
 					<h2>Start a Code Club <br><a href="https://www.codeclub.org.uk/" target="_blank">codeclub.org.uk</a> <h2>
+					<ul class="list">
+						<li>Find a school/be found</li>
+						<li>Arrange for a DBS statement and insurance via STEMNET</li>
+						<li>Complete the Code Club Volunteer Training. You can do this online, or attend a training session</li>
+					</ul>
 				</section>
 
 				<section style="text-align: left;"  data-background="#349946">
@@ -78,7 +88,7 @@
 					<hr>
 
 					<h4>Calum Ryan</h4>
-					<p class="uppercase"><small>London Web Standards - January 2015</small></p>
+					<p class="uppercase"><small>Sevenoaks Web Scene - June 2015</small></p>
 				</section>
 
 			</div>
